--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -17,10 +17,9 @@
         <tr>
             <!--DB 객체 필드를 불러온다-->
             <td>{{id}}</td>
-            <td>{{id}}</td>
-            <td>{{title}}</td>
+            <td><a href="/posts/update/{{id}}"> {{title}}</a></td>
             <td>{{author}}</td>
-            <td>{{modifieldDate}}</td>
+            <td>{{modifiedDate}}</td>
         </tr>
         {{/posts}}
         </tbody>
